# foward_diser

./: CMakeLists.txt  CMakeLists.txt.user.ec9811d  DataArray.cpp  DataArray.hpp  DataProcessors.cpp  DataProcessors.hpp  FPGAProcessor.cpp  FPGAProcessor.hpp  MacCormackProcessor.cpp  MacCormackProcessor.hpp  MacCormack_ref_float.cpp  TsunamiProcessor.cpp  TsunamiProcessor.hpp  TsunamiReg.hpp  TsunamiRunner.cpp  tsunami-ioctl.h
NetCDFViewer/: CMakeLists.txt  LayerModel.cpp  LayerModel.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  NetCDFWidget.cpp  NetCDFWidget.h  Shaders.qrc  depth.frag  geo.frag  jet.frag  main.cpp  null.frag  null.vert  water.frag
data/: NorthKuril-1952.json  NorthKuril-1952_h_max.txt  hand_quadro_all_h_max.txt  hand_quadro_ref.json  quadro_1.json  quadro_2.json  quadro_3.json  quadro_4.json  quadro_all.json  quadro_all_8_-4.json  quadro_left_all.json
data/octo/: octo_1.json  octo_1_1_all.json  octo_1_1_all_h_max.txt  octo_1_32_all.json  octo_1_6_all.json  octo_2.json  octo_3.json  octo_4.json  octo_5.json  octo_6.json
export_cdf/: CMakeLists.txt  NetCDFExporter.cpp
runner_auto/: main.py  mariogram.py  quadro_all.json  runner.py  s.bash
runner_auto/1/: 1_1000_1100  1_1000_200  1_1000_350  1_1000_500  1_1000_650  1_1100_1100  1_1100_200  1_1100_350  1_1100_500  1_1100_650  1_700_1100  1_700_200  1_700_500  1_700_800  1_700_950  1_800_800  1_800_950  1_900_1100  1_900_200  1_900_650  1_900_800
runner_auto/2/: 2_1000_1100  2_1000_200  2_1000_350  2_1000_500  2_1100_1100  2_1100_200  2_1100_350  2_700_1100  2_700_650  2_700_950  2_800_350  (+7 more)
(+136 files in other folders)
